--- a/index.html
+++ b/index.html
@@ -78,7 +78,24 @@
         </ul>
       </section>
       <section class="skills_site common_sec hidde_sec" id="page3"></section>
-      <section class="portfolio_site common_sec hidde_sec" id="page4"></section>
+      <section class="portfolio_site common_sec hidde_sec" id="page4">
+        <ul class="grid_portfolio">
+          <li class="fadeInLeft"><a href="http://www.urbanloftexchange.com" target="_blank"><img src="images/urban.jpg" alt=""/><span>
+                <h4>view project</h4></span></a></li>
+          <li class="fadeInRight"><a href="http://dgtsrv5.dgtalliance.com/dev/2016/wp/evelyn-mackenzie/aria-luxe" target="_blank"><img src="images/arialuxe.jpg" alt=""/><span>
+                <h4>view project</h4></span></a></li>
+          <li class="fadeInLeft"><a href="http://dgtsrv5.dgtalliance.com/dev/2016/html/Comras/" target="_blank"><img src="images/comras.jpg" alt=""/><span>
+                <h4>view project</h4></span></a></li>
+          <li class="fadeInRight"><a href="http://www.graberrealty.com"><img src="images/graber.jpg" alt=""/><span>
+                <h4>view project</h4></span></a></li>
+          <li class="fadeInLeft"><a href="http://dgtsrv5.dgtalliance.com/dev/2016/wp/monica-martinez" target="_blank"><img src="images/monicamartinez.jpg" alt=""/><span>
+                <h4>view project</h4></span></a></li>
+          <li class="fadeInRight"><a href="http://dgtsrv5.dgtalliance.com/dev/2016/html/flexidx/home.html" target="_blank"><img src="images/flex.jpg" alt=""/><span>
+                <h4>view project</h4></span></a></li>
+          <li class="fadeInLeft"><a href="http://dgtsrv5.dgtalliance.com/dev/2016/html/black-flower/index.html" target="_blank"><img src="images/carmenate.jpg" alt=""/><span>
+                <h4>view project</h4></span></a></li>
+        </ul>
+      </section>
       <section class="contact_site common_sec hidde_sec" id="page5">
         <div class="contact_bloq">
           <h4>contact me </h4>
