--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </section>
       <section class="made-cnt common_sec hidde_sec" id="page2">
         <div class="left_about">
-          <div class="description_about fadeInLeft">
+          <div class="description_about fadeInLeftBounce">
             <h2>Hola</h2>
             <p>Soy un desarrollador Front-end, fascinado con  lo que se puede lograr usando lenguajes como html,css,javascript y tener como resultados grandes diseños adaptables en diversos dispositivos para satisfacer las necesidades del cliente.</p>
           </div>
