update js files

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       <li><a href="#page5" rel="">contact</a></li>
     </ul>
   </nav>
-  <canvas id="demo-canvas"></canvas>
+  <div id="particles-js"></div>
   <div class="container"> 
     <main>
       <section class="large-header hidde_sec active_sec" id="large-header">
         <div class="content_me">
           <div class="tittle"> 
             <h1 class="tittle-animation">jose mendoza</h1>
-            <p class="tittle-animation tittle_dev">front end developer</p>
+            <p class="tittle-animation tittle_dev">front end developer      </p>
           </div>
         </div>
       </section>
@@ -119,10 +119,12 @@
             </ul>
           </form>
         </div>
+        <div id="map"></div>
       </section>
     </main>
   </div>
-  <script src="js/jquery.min.js">  </script>
-  <script src="js/plugins.js"></script>
-  <script src="js/app.js">     </script>
+  <script src="js/jquery.min.js"> </script>
+  <script src="js/particles.min.js"></script>
+  <script src="js/stats.js"></script>
+  <script src="js/main.js">     </script>
 </body>
