add styles contact

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               <li>
                 <textarea type="text" placeholder="message"></textarea>
               </li>
-              <li>
+              <li class="cnt_button_contact">
                 <button class="contact_form_btn">enviar</button>
               </li>
             </ul>
