update effect bounce contact

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </ul>
       </section>
       <section class="contact_site common_sec hidde_sec" id="page5">
-        <div class="contact_bloq">
+        <div class="contact_bloq fadeInBottom">
           <h4>contact me </h4>
           <form class="form_contact">
             <ul class="list_cnt_contact">
