--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
   </header>
   <nav class="navigation">
     <ul class="list_navigator">
-      <li><a href="#large-header" rel="">hello</a></li>
-      <li><a href="#page2" rel="">about</a></li>
-      <li><a href="#page4" rel="">portfolio</a></li>
-      <li><a href="#page5" rel="">contact</a></li>
+      <li><a href="#hello" rel="">hello</a></li>
+      <li><a href="#about" rel="">about</a></li>
+      <li><a href="#portfolio" rel="">portfolio</a></li>
+      <li><a href="#contact" rel="">contact</a></li>
     </ul>
   </nav>
   <div id="particles-js"></div>
   <div class="container"> 
     <main>
-      <section class="large-header hidde_sec active_sec" id="large-header">
+      <section class="large-header hidde_sec active_sec" id="hello">
         <div class="content_me">
           <div class="tittle"> 
             <h1 class="tittle-animation">jose mendoza</h1>
@@ -31,7 +31,7 @@
           </div>
         </div>
       </section>
-      <section class="made-cnt common_sec hidde_sec" id="page2">
+      <section class="made-cnt common_sec hidde_sec" id="about">
         <div class="left_about">
           <div class="description_about fadeInLeftBounce">
             <h2>Hola</h2>
@@ -77,8 +77,7 @@
           </li>
         </ul>
       </section>
-      <section class="skills_site common_sec hidde_sec" id="page3"></section>
-      <section class="portfolio_site common_sec hidde_sec" id="page4">
+      <section class="portfolio_site common_sec hidde_sec" id="portfolio">
         <ul class="grid_portfolio">
           <li class="fadeInLeft"><a href="http://www.urbanloftexchange.com" target="_blank"><img src="images/urban.JPG" alt=""/><span>
                 <h4>view project</h4></span></a></li>
@@ -96,7 +95,7 @@
                 <h4>view project</h4></span></a></li>
         </ul>
       </section>
-      <section class="contact_site common_sec hidde_sec" id="page5">
+      <section class="contact_site common_sec hidde_sec" id="contact">
         <div class="contact_bloq fadeInBottom">
           <h4>contact me </h4>
           <form class="form_contact">
