update styles header contact

--- a/index.html
+++ b/index.html
@@ -101,16 +101,16 @@
           <form class="form_contact">
             <ul class="list_cnt_contact">
               <li>
-                <input type="text" placeholder="name"/>
+                <input type="text" placeholder="name"/><span> </span>
               </li>
               <li>
-                <input type="text" placeholder="email"/>
+                <input type="text" placeholder="email"/><span></span>
               </li>
               <li>
-                <input type="text" placeholder="subject"/>
+                <input type="text" placeholder="subject"/><span></span>
               </li>
-              <li>
-                <textarea type="text" placeholder="message"></textarea>
+              <li class="cnt_textarea">
+                <textarea type="text" placeholder="message"></textarea><span></span>
               </li>
               <li class="cnt_button_contact">
                 <button class="contact_form_btn">enviar</button>
