--- a/index.html
+++ b/index.html
@@ -81,17 +81,17 @@
         <ul class="grid_portfolio">
           <li class="fadeInLeft"><a href="http://www.urbanloftexchange.com" target="_blank"><img src="images/urban.JPG" alt=""/><span>
                 <h4>view project</h4></span></a></li>
-          <li class="fadeInRight"><a href="http://dgtsrv5.dgtalliance.com/dev/2016/wp/evelyn-mackenzie/aria-luxe" target="_blank"><img src="images/arialuxe.JPG" alt=""/><span>
+          <li class="fadeInRight"><a href="javascript:void(0)" target="_blank"><img src="images/arialuxe.JPG" alt=""/><span>
                 <h4>view project</h4></span></a></li>
-          <li class="fadeInLeft"><a href="http://dgtsrv5.dgtalliance.com/dev/2016/html/Comras/" target="_blank"><img src="images/comras.JPG" alt=""/><span>
+          <li class="fadeInLeft"><a href="javascript:void(0)" target="_blank"><img src="images/comras.JPG" alt=""/><span>
                 <h4>view project</h4></span></a></li>
-          <li class="fadeInRight"><a href="http://www.graberrealty.com"><img src="images/graber.JPG" alt=""/><span>
+          <li class="fadeInRight"><a href="http://www.graberrealty.com" target="_blank"><img src="images/graber.JPG" alt=""/><span>
                 <h4>view project</h4></span></a></li>
-          <li class="fadeInLeft"><a href="http://dgtsrv5.dgtalliance.com/dev/2016/wp/monica-martinez" target="_blank"><img src="images/monicamartinez.JPG" alt=""/><span>
+          <li class="fadeInLeft"><a href="javascript:void(0)" target="_blank"><img src="images/monicamartinez.JPG" alt=""/><span>
                 <h4>view project</h4></span></a></li>
-          <li class="fadeInRight"><a href="http://dgtsrv5.dgtalliance.com/dev/2016/html/flexidx/home.html" target="_blank"><img src="images/flex.JPG" alt=""/><span>
+          <li class="fadeInRight"><a href="javascript:void(0)" target="_blank"><img src="images/flex.JPG" alt=""/><span>
                 <h4>view project</h4></span></a></li>
-          <li class="fadeInLeft"><a href="http://dgtsrv5.dgtalliance.com/dev/2016/html/black-flower/index.html" target="_blank"><img src="images/carmenate.JPG" alt=""/><span>
+          <li class="fadeInLeft"><a href="javascript:void(0)" target="_blank"><img src="images/carmenate.JPG" alt=""/><span>
                 <h4>view project</h4></span></a></li>
         </ul>
       </section>
