update header class

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Document</title>
 </head>
 <body>
-  <header>
+  <header class="header_container">
     <button class="btn-nav"><i></i><i></i><i> </i></button>
   </header>
   <nav class="navigation">
